--- a/.classpath
+++ b/.classpath
@@ -3,13 +3,13 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="build/.apt_generated"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/MyInstalls/Android/android-sdk/platforms/android-8/android.jar"/>
-	<classpathentry kind="lib" path="C:/MyInstalls/Android/android-sdk/add-ons/addon-google_apis-google_inc_-8/libs/maps.jar"/>
-	<classpathentry kind="lib" path="C:/Users/perminder.singh/AppData/Roaming/Titanium/mobilesdk/win32/1.8.2/android/titanium.jar"/>
-	<classpathentry kind="lib" path="C:/Users/perminder.singh/AppData/Roaming/Titanium/mobilesdk/win32/1.8.2/android/js.jar"/>
-	<classpathentry kind="lib" path="C:/Users/perminder.singh/AppData/Roaming/Titanium/mobilesdk/win32/1.8.2/android/modules/titanium-filesystem.jar"/>
-	<classpathentry kind="lib" path="C:/Users/perminder.singh/AppData/Roaming/Titanium/mobilesdk/win32/1.8.2/android/kroll-common.jar"/>
-	<classpathentry kind="lib" path="C:/Users/perminder.singh/AppData/Roaming/Titanium/mobilesdk/win32/1.8.2/android/kroll-apt.jar"/>
-	<classpathentry kind="lib" path="lib/geoloqi.12.081.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="/usr/local/var/lib/android-sdk/platforms/android-8/android.jar"/>
+	<classpathentry kind="lib" path="/usr/local/var/lib/android-sdk/add-ons/addon-google_apis-google-8/libs/maps.jar"/>
+	<classpathentry kind="lib" path="/Users/joshy/Library/Application Support/Titanium/mobilesdk/osx/2.1.2.GA/android/titanium.jar"/>
+	<classpathentry kind="lib" path="/Users/joshy/Library/Application Support/Titanium/mobilesdk/osx/2.1.2.GA/android/js.jar"/>
+	<classpathentry kind="lib" path="/Users/joshy/Library/Application Support/Titanium/mobilesdk/osx/2.1.2.GA/android/modules/titanium-filesystem.jar"/>
+	<classpathentry kind="lib" path="/Users/joshy/Library/Application Support/Titanium/mobilesdk/osx/2.1.2.GA/android/kroll-common.jar"/>
+	<classpathentry kind="lib" path="/Users/joshy/Library/Application Support/Titanium/mobilesdk/osx/2.1.2.GA/android/kroll-apt.jar"/>
+	<classpathentry kind="lib" path="lib/geoloqi.jar" sourcepath="/Users/joshy/geoloqi/Geoloqi-Android-SDK-Private/src"/>
+	<classpathentry kind="output" path="out/production/Geoloqi-Android-Titanium-Module"/>
 </classpath>
